Dockerrun and travis updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,16 @@ after_success:
   - docker push imranaskem/complex-node-server
   - docker push imranaskem/complex-nginx
   - docker push imranaskem/complex-node-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-2"
+  app: "complex"
+  env: "Complex-env"
+  bucket_name: "elasticbeanstalk-eu-west-2-108379538206"
+  bucket_path: "complex"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
